--- a/gamehub.client/src/routes/GamesPage.module.css
+++ b/gamehub.client/src/routes/GamesPage.module.css
@@ -308,8 +308,103 @@
 
 /* Mobile */
 @media (max-width: 480px) {
+    .gamesDiv {
+        gap: 1.2rem;
+    } 
+
     .divCenter {
-        margin-top: 45px;
+        margin-top: 33px;
+    }
+
+    .searchForm {
+        width: 60%;
+    }
+
+    .searchBar{
+        width: 100%;
+        height: 25px;
+    }
+    
+    .searchBar .icon{
+        font-size: 12px;
+    }
+    
+    .searchBar input{
+        width: 100%;
+        height: 100%;
+        padding: 0px 25px;
+        font-size: 14px;
+    }
+    
+    .searchBar input::placeholder{
+        font-size: 12px;
+    }
+
+    .gameImg {
+        width: 100px;
+        min-height: 125px;
+        max-height: 125px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+    
+    .btnSummary {
+        width: 100%;
+        background-color: transparent;
+        font-size: 10px;
+        color: var(--lightGrey);
+        transition: all 0.5s ease;
+    }
+    
+    .divSummary {
+        padding: 3px 1px;
+    }
+    
+    .bigGameData {
+        transform: scale(1.2);
+        box-shadow: 2px 2px 6px 3px transparent;
+        border: 3px solid transparent;
+    }
+    
+    .bigGameData:hover,
+    .bigGameData:focus {
+        transform: scale(1.2);
+        box-shadow: 2px 2px 8px 3px transparent;
+    }
+
+    .divSummary .summaryContent {
+        font-size: 8px;
+    }
+
+    .divSimplifiedData {
+        gap: 1px;
+        padding: 3px 2px;
+    }
+
+    .divSimplifiedData h2 {
+        font-size: 10px;
+        font-weight: bold;
+        margin-bottom: 2px;
+    }
+
+    .divSimplifiedData p {
+        font-size: 8px;
+        font-weight: normal;
+    }
+    
+    .divSimplifiedData p span {
+        font-weight: normal;
+        font-size: 8px;
+    }
+    .btnSummary {
+        font-size: 8px;
+        font-weight: normal;
+    }
+    .btnAdd .spanRemove {
+        display: none;
+    }
+    .btnAdd .sideIcon{
+        font-size: 14px;
     }
 }
 
@@ -317,4 +412,24 @@
 @media (min-width: 481px) and (max-width: 768px) {}
 
 /* Desktop */
-@media (min-width: 769px) and (max-width: 1024px) {}
+@media (min-width: 769px) and (max-width: 1024px) {
+    .divCenter{
+        margin-top: 75px;
+    }
+
+    .gamesDiv {
+        gap: 1.5rem;
+    }    
+
+    .gameData {
+        border: 5px solid transparent;
+        border-radius: 5px;
+        box-shadow: 2px 2px 8px 2px var(--black);
+        transition: all 0.3s ease;
+    }
+    
+    .gameData:hover,
+    .gameData:focus {
+        box-shadow: 2px 2px 8px 2px var(--turquoise);
+    }
+}
