--- a/gamehub.client/src/routes/Register.module.css
+++ b/gamehub.client/src/routes/Register.module.css
@@ -259,4 +259,8 @@
         align-items: center;
         justify-content: center;
     }
+    .divGenCpf .btnCpf,
+    .divGenCpf .cpfGenerated{
+        font-size: 13px;
+    }
 }
