--- a/gamehub.client/src/routes/Login.module.css
+++ b/gamehub.client/src/routes/Login.module.css
@@ -238,4 +238,9 @@
         text-align: center; 
         margin-bottom: -10px;
     }
+    .register{
+        padding: 5px 8px;
+        font-size: 16px;
+        width: 80%;
+    }
 }
