Criando a página para buscar posts de um determinado jogo, deixando as páginas responsivas

--- a/gamehub.client/src/routes/CommunityPage.module.css
+++ b/gamehub.client/src/routes/CommunityPage.module.css
@@ -372,7 +372,7 @@
 
 .headerInfo .divInfoController .game .spanData{
     width: 100%;
-    word-break: break-all;
+    align-items: center;
 }
 
 .youSpan{
