--- a/gamehub.client/src/routes/Library.module.css
+++ b/gamehub.client/src/routes/Library.module.css
@@ -1261,6 +1261,7 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 
     .divSearchBar{
+        margin-top: -30px;
     }
     
     .searchBar{
