--- a/gamehub.client/src/components/CommunityPosts.module.css
+++ b/gamehub.client/src/components/CommunityPosts.module.css
@@ -326,8 +326,50 @@
     fill: var(--turquoise);
 }
 
+.postGame{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: var(--lightGrey);
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.postGame .gameCover{
+    width: 35px;
+    height: 50px;
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 2px solid var(--mediumgrey);
+    transition: all 0.3s ease;
+}
+
+.postGame span{
+    color: var(--grey);
+    font-size: 14px;
+}
+
 /* Mobile */
 @media (max-width: 480px) {
+    .postGame{
+        font-size: 12px;
+        font-weight: bold;
+        align-items: center;
+    }
+    
+    .postGame .gameCover{
+        width: 25px;
+        height: 35px;
+        background-color: var(--black);
+        border-radius: 2px;
+    }
+    
+    .postGame span{
+        color: var(--grey);
+        font-size: 8px;
+        align-items: center;
+    }
+
     .containerPosts .pageTitle{
         font-weight: 100;
         font-size: 20px;
