--- a/gamehub.client/src/components/UpdateCommunity.module.css
+++ b/gamehub.client/src/components/UpdateCommunity.module.css
@@ -271,6 +271,156 @@
     border-color: var(--turquoise);
 }
 
+.searchGamesDiv{
+    margin: 1rem 0px 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.searchGamesDiv .gameLabel{
+    color: var(--lightGrey);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.searchGamesDiv .gameLabel:hover{
+    color: var(--whitesmoke);
+}
+
+.searchBar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    height: 40px;
+    margin-top: 10px;
+    position: relative;
+}
+
+.searchBar .icon{
+    position: absolute;
+    fill: var(--grey);
+    left: 10px;
+    z-index: 2;
+    transition: all 0.3s ease;
+}
+
+.searchBar input{
+    width: 100%;
+    height: 100%;
+    padding: 10px 35px;
+    border: 2px solid var(--grey);
+    border-radius: 10px;
+    font-size: 16px;
+    color: var(--whitesmoke);
+    background-color: rgba(35, 35, 35, 1);
+    transition: all 0.3s ease;
+    border-color: var(--grey);
+    z-index: 1;
+}
+
+.searchBar input:focus,
+.searchBar:focus-within .icon{
+    color: var(--turquoise);
+    border-color: var(--turquoise);
+    fill: var(--turquoise);
+}
+
+.searchBar input::placeholder{
+    font-size: 14px;
+}
+
+.searchBar .btnSearch{
+    background-color: transparent;
+    font-size: 14px;
+    font-weight: bold;
+    z-index: 0;
+    height: 100%;
+    padding: 5px 5px 5px 20px;
+    margin-left: -15px;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.searchBar .btnSearch:hover{
+    background-color: var(--turquoise);
+    color: var(--black);
+}
+
+.searchResult{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    margin-top: 10px;
+}
+
+.searchResult span{
+    color: var(--lightGrey);
+}
+
+.searchResult .btnClear{
+    background-color: transparent;
+    padding: 2px 10px;
+    border-radius: 5px;
+    border: 2px solid var(--grey);
+    font-size: 16px;
+    transition: all 0.3s ease;
+}
+
+.searchResult .gamesDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+}
+
+.searchResult .gamesDiv .gameOptions{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    background-color: transparent;
+    padding: 2px 5px;
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--grey);
+    border-radius: 10px;
+    transition: all 0.3s ease;
+}
+
+.searchResult .gamesDiv .gameOptions:hover{
+    color: var(--black);
+    background-color: var(--turquoise);
+}
+
+.searchResult .gamesDiv .gameOptions .gameCover{
+    width: 35px;
+    height: 50px;
+    background-color: var(--black);
+    border-radius: 5px;
+    border: 2px solid var(--mediumgrey);
+    transition: all 0.3s ease;
+}
+
+.searchResult .gamesDiv .gameOptions:hover{
+    transform: scale(1.2);
+}
+
+.searchResult .gamesDiv .select{
+    color: var(--black);
+    background-color: var(--darkcyan);
+}
+
+.searchResult .btnClear:hover{
+    transform: scale(1.05);
+    border-color: var(--turquoise);
+}
+
 /* Mobile */
 @media (max-width: 480px) {
     .divCenter{
@@ -402,6 +552,51 @@
         margin: 10px 0;
         font-size: 16px;
         max-width: 200px;
+    }
+
+    .searchGamesDiv .gameLabel{
+        font-size: 10px;
+    }
+    
+    .searchBar{
+        width: 100%;
+        height: 30px;
+        margin-top: 10px;
+    }
+    
+    .searchBar .icon{
+        position: absolute;
+        fill: var(--grey);
+        left: 10px;
+        font-size: 12px;
+        z-index: 2;
+    }
+    
+    .searchBar input{
+        padding: 2px 5px 2px 25px;
+        font-size: 13px;
+    }
+    
+    .searchBar input::placeholder{
+        font-size: 12px;
+    }
+    
+    .searchBar .btnSearch{
+        background-color: transparent;
+        font-size: 10px;
+        font-weight: bold;
+        z-index: 0;
+        height: 100%;
+        padding: 1px 8px 1px 16px;
+        border: 1px solid var(--mediumgrey);
+        margin-left: -15px;
+        border-radius: 10px;
+        transition: all 0.3s ease;
+    }
+    
+    .searchBar .btnSearch:hover{
+        background-color: var(--turquoise);
+        color: var(--black);
     }
 }
 
