--- a/gamehub.client/src/routes/IsolatedPost.module.css
+++ b/gamehub.client/src/routes/IsolatedPost.module.css
@@ -1,9 +1,9 @@
-.divMain{
+.divMain {
     display: flex;
     flex-direction: column;
 }
 
-.divCenter{
+.divCenter {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +14,7 @@
     gap: 2rem;
 }
 
-.divContent{
+.divContent {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +23,7 @@
     width: 60%;
 }
 
-.containerPost{
+.containerPost {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,13 +32,13 @@
     gap: 1rem;
 }
 
-.containerPost .divAuthor{
+.containerPost .divAuthor {
     width: 100%;
     height: 200px;
     position: relative;
 }
 
-.divAuthor .imgBackground{
+.divAuthor .imgBackground {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -56,7 +56,7 @@
     width: 100%;
 }
 
-.divAuthor .infoAuthor img{
+.divAuthor .infoAuthor img {
     border-radius: 50%;
     min-width: 150px;
     min-height: 150px;
@@ -67,7 +67,7 @@
     background-color: var(--black);
 }
 
-.infoAuthor .authorHeader{
+.infoAuthor .authorHeader {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -79,7 +79,9 @@
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.authorHeader p, .authorHeader .date, .authorHeader span{
+.authorHeader p,
+.authorHeader .date,
+.authorHeader span {
     font-size: 30px;
     text-shadow: 1px 1px 2px var(--turquoise);
     max-width: 100%;
@@ -87,15 +89,15 @@
     color: var(--lightGrey);
 }
 
-.authorHeader .date{
+.authorHeader .date {
     font-size: 18px;
 }
 
-.authorHeader .author{
+.authorHeader .author {
     position: relative;
 }
 
-.authorHeader .author::after{
+.authorHeader .author::after {
     content: "";
     position: absolute;
     left: 0;
@@ -105,12 +107,12 @@
     background-color: var(--turquoise);
     transition: all 0.3s ease;
 }
-  
-.authorHeader .author:hover::after{
+
+.authorHeader .author:hover::after {
     width: 100%;
 }
 
-.divPost{
+.divPost {
     margin-top: 4rem;
     display: flex;
     flex-direction: column;
@@ -124,34 +126,34 @@
     transition: all 0.3s ease;
 }
 
-.divPost:hover{
+.divPost:hover {
     background-color: var(--clearblack);
 }
 
-.postOption{
+.postOption {
     position: absolute;
     top: 15px;
     right: 10px;
 }
 
-.postOption .trashButton{
+.postOption .trashButton {
     padding: 2px;
     background-color: transparent;
     font-size: 18px;
     transition: all 0.3s ease;
 }
 
-.trashButton .trashIcon{
+.trashButton .trashIcon {
     fill: var(--grey);
     transition: all 0.3s ease;
 }
 
-.trashButton:hover .trashIcon{
+.trashButton:hover .trashIcon {
     fill: crimson;
     transform: scale(1.3);
 }
 
-.postContent{
+.postContent {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -160,21 +162,21 @@
     gap: 1rem;
 }
 
-.postContent .title{
+.postContent .title {
     font-size: 30px;
     font-weight: bold;
     max-width: 100%;
     overflow-wrap: break-word;
 }
 
-.postContent .content{
+.postContent .content {
     font-size: 20px;
     color: var(--lightGrey);
     max-width: 100%;
     overflow-wrap: break-word;
 }
 
-.postContent .postImage{
+.postContent .postImage {
     max-width: 100%;
     max-height: 1500px;
     object-fit: cover;
@@ -183,19 +185,19 @@
     transition: all 0.3s ease;
 }
 
-.divPost:hover .postImage{
+.divPost:hover .postImage {
     border-color: var(--grey);
     box-shadow: 0px 0px 5px var(--black);
 }
 
-.divPost .divBtnImage{
+.divPost .divBtnImage {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.divPost .divBtnImage div{
+.divPost .divBtnImage div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -203,12 +205,12 @@
     width: 100%;
 }
 
-.divPost .divBtnImage label{
+.divPost .divBtnImage label {
     font-size: 14px;
     color: var(--grey);
 }
 
-.divPost .btnShowImage{
+.divPost .btnShowImage {
     background-color: transparent;
     padding: 0px;
     color: var(--lightGrey);
@@ -218,7 +220,7 @@
     transition: all 0.3s ease;
 }
 
-.btnShowImage::after{
+.btnShowImage::after {
     content: "";
     position: absolute;
     left: 0;
@@ -228,23 +230,24 @@
     background-color: var(--turquoise);
     transition: all 0.3s ease;
 }
-  
-.btnShowImage:hover::after{
+
+.btnShowImage:hover::after {
     width: 100%;
 }
 
-.postFooter{
+.postFooter {
     display: flex;
     flex-direction: row;
     gap: 1rem;
 }
 
-.postFooter button{
+.postFooter button {
     background-color: transparent;
     font-size: 20px;
 }
 
-.postFooter .postIcon, .postFooter .postIconDislike{
+.postFooter .postIcon,
+.postFooter .postIconDislike {
     border: 2px solid transparent;
     padding: 1px;
     border-radius: 5px;
@@ -252,31 +255,31 @@
     font-size: 1.6rem;
 }
 
-.postFooter .postIcon:hover{
+.postFooter .postIcon:hover {
     fill: var(--turquoise);
     transform: scale(1.2);
 }
 
-.postFooter .postIconDislike:hover{
+.postFooter .postIconDislike:hover {
     fill: crimson;
     transform: scale(1.2);
 }
 
-.opinionActivatedLike{
+.opinionActivatedLike {
     fill: var(--turquoise);
     transform: scale(1.3);
 }
 
-.opinionActivatedDislike{
+.opinionActivatedDislike {
     fill: crimson;
     transform: scale(1.3);
 }
 
-.divLike{
+.divLike {
     position: relative;
 }
 
-.divLike p{
+.divLike p {
     position: absolute;
     margin-top: 0 auto;
     width: 100%;
@@ -284,26 +287,25 @@
     color: var(--grey);
 }
 
-.youSpan{
+.youSpan {
     font-size: 14px;
     color: var(--grey);
     display: none;
 }
 
 .divPost:hover .youSpan,
-.divPost:hover .trashButton
-{
+.divPost:hover .trashButton {
     display: inline;
 }
 
-.communityLink p{
+.communityLink p {
     display: flex;
     flex-direction: row;
     align-items: center;
     color: var(--grey);
 }
 
-.communityLink p span{
+.communityLink p span {
     margin-left: 5px;
     display: none;
     opacity: 0;
@@ -311,7 +313,7 @@
     transition: all 0.3s ease;
 }
 
-.communityLink p span img{
+.communityLink p span img {
     border-radius: 50%;
     min-width: 30px;
     min-height: 30px;
@@ -321,7 +323,7 @@
     border: 2px solid var(--black);
 }
 
-.communityLink p:hover span{
+.communityLink p:hover span {
     display: flex;
     align-items: center;
     opacity: 1;
@@ -330,25 +332,65 @@
     animation-name: showText;
 }
 
-.communityLink{
+.communityLink {
     width: 50%;
 }
 
+.divGame {
+    margin: 4rem 0px 0px 15px;
+    width: 100%;
+}
+
+.divGame p{
+    font-size: 18px;
+    color: var(--lightGrey);
+    margin-bottom: 15px;
+}
+
+.divGame .linkGame{
+    gap: 1rem;
+}
+
+.divGame .imgGame {
+    width: 180px;
+    min-height: 240px;
+    max-height: 240px;
+    object-fit: cover;
+    border-radius: 5px;
+    border: 2px solid var(--black);
+    transition: all 0.3s ease;
+}
+
+.divGame .imgGame:hover {
+    transform: scale(1.1);
+}
+
+.divGame .gameName{
+    font-size: 20px;
+    color: var(--turquoise);
+    font-weight: bold;
+}
+
+.divPostWithGame {
+    margin-top: 0px;
+}
+
 @keyframes showText {
-    from{
+    from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 100%;
     }
 }
 
 @media (max-width: 480px) {
-    .divCenter{
+    .divCenter {
         margin-top: 45px;
     }
 
-    .divContent{
+    .divContent {
         gap: 1rem;
         width: 75%;
     }
@@ -361,7 +403,7 @@
         width: 75%;
     }
 
-    .communityLink{
+    .communityLink {
         width: 100%;
     }
 
@@ -369,7 +411,7 @@
     .headerInfo {
         gap: 2px;
     }
-    
+
     .divPost:hover .youSpan {
         display: block;
     }
@@ -378,22 +420,22 @@
         display: flex;
     }
 
-    .youSpan{
+    .youSpan {
         font-size: 10px;
     }
 
-    .postOption{
+    .postOption {
         display: flex;
         align-items: center;
         justify-content: center;
         max-width: 30px;
     }
 
-    .postHeader .headerControl{
+    .postHeader .headerControl {
         justify-content: none;
     }
 
-    .iconButton{
+    .iconButton {
         font-size: 12px;
         margin: 0 4px;
         padding: 0;
@@ -404,7 +446,7 @@
         left: 15px;
     }
 
-    .divAuthor .infoAuthor img{
+    .divAuthor .infoAuthor img {
         border-radius: 50%;
         max-width: 120px;
         min-width: 120px;
@@ -413,72 +455,77 @@
         border: 5px solid var(--deepgray);
     }
 
-    .divPost{
+    .divPost {
         margin-top: 1rem;
         width: 100%;
         padding: 10px 0px;
         gap: 15px;
     }
 
-    .date, .authorHeader span{
+    .date,
+    .authorHeader span {
         display: none;
     }
-    
-    .authorHeader .author{
+
+    .authorHeader .author {
         font-size: 15px;
     }
 
-    .postContent .title{
+    .postContent .title {
         font-size: 18px;
     }
 
-    .postContent .content{
+    .postContent .content {
         font-size: 15px;
     }
 }
 
 /* Tablet */
 @media (min-width: 481px) and (max-width: 768px) {
-    .infoAuthor .authorHeader{
+    .infoAuthor .authorHeader {
         gap: 5px;
         padding: 10px 5px;
         text-align: center;
         flex-wrap: wrap;
         max-width: 100%;
     }
-    
-    .authorHeader p, .authorHeader .date, .authorHeader span{
+
+    .authorHeader p,
+    .authorHeader .date,
+    .authorHeader span {
         font-size: 20px;
     }
 
-    .authorHeader span{
+    .authorHeader span {
         display: none;
     }
-    
-    .authorHeader .date{
+
+    .authorHeader .date {
         font-size: 14px;
     }
 
-    .postContent .title{
+    .postContent .title {
         font-size: 20px;
     }
 }
 
 /* Desktop */
 @media (min-width: 769px) and (max-width: 1024px) {
-    .infoAuthor .authorHeader{
+    .infoAuthor .authorHeader {
         gap: 5px;
         padding: 10px 5px;
         text-align: center;
         flex-wrap: wrap;
         max-width: 100%;
     }
-    
-    .authorHeader p, .authorHeader .date, .authorHeader span{
+
+    .authorHeader p,
+    .authorHeader .date,
+    .authorHeader span {
         font-size: 25px;
     }
-    
-    .authorHeader .date{
+
+    .authorHeader .date {
         font-size: 16px;
     }
 }
