--- a/gamehub.client/src/routes/Profile.module.css
+++ b/gamehub.client/src/routes/Profile.module.css
@@ -458,6 +458,29 @@ p:hover .spanPublic,
     margin-top: 95px;
 }
 
+.libraryLink{
+    font-size: 16px;
+    color: var(--lightGrey);
+    display: flex;
+    gap: 5px;
+    margin-bottom: 10px;
+    border-bottom: 2px solid transparent;
+    transition: all 0.3s ease;
+}
+
+.libraryLink:hover,
+.libraryLink:hover .libraryIcon{
+    color: var(--turquoise);
+    fill: var(--turquoise);
+    transform: scale(1.03);
+    border-bottom-color: var(--turquoise);
+}
+
+.libraryIcon{
+    fill: var(--lightGrey);
+    transition: all 0.3s ease;
+}
+
 /* Mobile */
 @media (max-width: 480px) {
     p:hover .spanPublic,
